Refactor Actor Summary, add trans for strings for designation, phase, summary forms

--- a/arches_hip/templates/views/forms/designation.htm
+++ b/arches_hip/templates/views/forms/designation.htm
@@ -36,7 +36,7 @@
                                             <!-- To date -->
                                             <div class="form-group datetimepicker" style="width:20%;">
                                                 <div class="input-group">
-                                                    <input type="text" name="mydate" id="date" placeholder='{% trans "to (yyyy-mm-dd)" %}' class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('DESIGNATION_OR_PROTECTION_TO_DATE.E49', 'value')} ">
+                                                    <input type="text" name="mydate" id="date" placeholder='{% trans "to (yyyy-mm-dd)" %}' class="form-control datepicker" data-date-format="YYYY-MM-DD"collapse-resource-description data-bind="{value: getEditedNode('DESIGNATION_OR_PROTECTION_TO_DATE.E49', 'value')} ">
                                                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                                 </div>
                                             </div>
