--- a/arches_hip/templates/views/forms/phase.htm
+++ b/arches_hip/templates/views/forms/phase.htm
@@ -41,14 +41,14 @@
 
                                     <div class="form-group datetimepicker" style="width:40%;">
                                         <div class="input-group">
-                                            <input type="text" name="mydate" placeholder="From" id='date' class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('FROM_DATE.E49', 'value')} ">
+                                            <input type="text" name="mydate" placeholder='{% trans "From (yyyy-mm-dd)" %}' id='date' class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('FROM_DATE.E49', 'value')} ">
                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                         </div>
                                     </div>&nbsp;
 
                                     <div class="form-group datetimepicker" style="width:40%;">
                                         <div class="input-group">
-                                            <input type="text" name="mydate" placeholder="To" id='date' class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('TO_DATE.E49', 'value')} ">
+                                            <input type="text" name="mydate" placeholder='{% trans "To (yyyy-mm-dd)" %}' id='date' class="form-control datepicker" data-date-format="YYYY-MM-DD" data-bind="{value: getEditedNode('TO_DATE.E49', 'value')} ">
                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
                                         </div>
                                     </div>
