--- a/arches_hip/templates/views/forms/summary.htm
+++ b/arches_hip/templates/views/forms/summary.htm
@@ -54,7 +54,7 @@
             <div class="arches-crud-child-section">
                 <dl>
                     <dd class="arches-CRUD-child-title">
-                        {% trans "This resource has these type:" %}
+                        {% trans "This resource has these types:" %}
                     </dd>
 
                     <dd class="margin-left-5" style="display: none;" data-bind="visible: true">
